# spacial-dist-func

./: .dir-locals.el  CMakeLists.txt  README.adoc  plot.py
src/: config.cpp  config.h  endian.h  main-sdf.cpp  pbc.cpp  pbc.h  sdf.cc  sdf.cpp  sdf.h  test.cpp  trajectory.cpp  trajectory.h  trojectory.cpp  trojectory.h  utils.cpp  utils.h  xtcio.cpp  xtcio.h
test/: main.cpp  test-pbc.cpp  test-sdf.cpp  test-xtcio.cpp  test.gro  test.txt  test.xml  test.xtc  testutils.h
